fix(layout): fixed overflow-x hack

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,3 @@ body {
 html, body, #root {
   height: 100%;
 }
-
-#root {
-  overflow-x: hidden;
-}
